LRP-4991 release prep